--- a/views/404.hbs
+++ b/views/404.hbs
@@ -1,3 +1,8 @@
-<div>
-    The requested resource with id="{{ressourceId}}" does not exist.
+<div class="page-not-found">
+    <div class="page-not-found-text">
+        The requested resource with id="{{ressourceId}}" does not exist.
+    </div>
+    <div class="page-not-found-meme">
+        <img src="/images/404.jpg" alt=""/>
+    </div>
 </div>
