--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -15,15 +15,22 @@
             }
 
             .todo-list {
-                background-color: #ffffff;
+                background-color: white;
             }
 
             .todo-list-item {
-                background-color: #000000;
+                background-color: black;
             }
 
             .todo-list-empty {
-                background-color: #000000;
+                background-color: black;
+            }
+            .content-header {
+                border-bottom: 1px solid white;
+            }
+
+            .content-footer {
+                border-top: 1px solid white;
             }
         </style>
     {{/if}}
