--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,7 @@
 
 body {
     font-family: Verdana, sans-serif;
+    font-size: small;
 }
 
 .content-header {
@@ -49,7 +50,7 @@ body {
 .content-footer {
     color: #8f8f8f;
     padding: 5px;
-    font-size: 8px;
+    font-size: 9px;
     text-align: center;
     position: fixed;
     bottom: 0;
@@ -132,14 +133,15 @@ body {
 .todo-list-item {
     display: grid;
     grid-template-rows: repeat(3, auto);
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 120px 2fr 1fr;
     grid-template-areas:
     "area-due-date area-title       area-importance"
     "area-state    area-description area-importance"
     "area-edit-button area-edit-button area-edit-button";
     grid-row-gap: 7px;
     background-color: white;
-    padding: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
     overflow: hidden;
 }
 
@@ -160,6 +162,7 @@ body {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    margin-right: 5px;
 }
 
 .todo-list-item-due-date-over {
@@ -167,6 +170,7 @@ body {
     color: red;
     position: relative;
     display: inline-block;
+    margin-right: 5px;
 }
 
 .todo-list-item-due-date-tooltip {
@@ -226,6 +230,7 @@ body {
 /* todo detail styles */
 
 .todo-detail-form {
+    font-size: medium;
     display: flex;
     flex-direction: column;
 }
@@ -246,6 +251,7 @@ body {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
+    font-family: Verdana, sans-serif;
     color: #333;
 }
 
@@ -271,6 +277,7 @@ textarea {
 /* button styles */
 
 .custom-button {
+    font-family: Verdana, sans-serif;
     background-color: #007bff; /* Add a background color to the button */
     color: white; /* Set the text color of the button */
     border: none; /* Remove the button border */
@@ -295,6 +302,10 @@ textarea {
 }
 
 /* importance styles */
+
+.importance {
+    align-self: start;
+}
 
 input.importance {
     display: none;
@@ -327,16 +338,16 @@ label.importance:before {
 @media screen and (min-width: 480px) {
     /* base desktop styles */
     body {
-        margin-left: 5%;
-        margin-right: 5%;
+        margin-left: 4%;
+        margin-right: 4%;
     }
 
     /* todo list desktop styles */
     .todo-list-header {
         display: grid;
-        grid-template-columns: 4fr 1fr;
+        grid-template-columns: auto 130px;
         grid-template-rows: 1fr 1fr;
-        gap: 10px;
+        gap: 1px;
     }
 
     .todo-list-header-dark-mode {
@@ -360,7 +371,7 @@ label.importance:before {
     /* todo list item desktop styles */
     .todo-list-item {
         grid-template-rows: repeat(2, auto);
-        grid-template-columns: 1fr 2fr 1fr 1fr;
+        grid-template-columns: 120px auto 100px 140px;
         grid-template-areas:
       "area-due-date area-title       area-importance area-edit-button"
       "area-state    area-description area-importance area-edit-button";
@@ -381,7 +392,6 @@ label.importance:before {
     }
 
     .todo-list-item-controls>form>.custom-button{
-        margin: 5px;
         flex: max-content;
     }
 }
