same behaviour as in video

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -201,6 +201,7 @@ body {
     justify-self: end;
     align-items: center;
     color: #ffea00;
+    margin-right: 5px;
     font-size: x-large;
 }
 
