--- a/views/todo-list.hbs
+++ b/views/todo-list.hbs
@@ -64,7 +64,7 @@
                 <div class="todo-list-item-title">{{this.title}}</div>
                 {{#if (is_due this.dueDate)}}
                     <div class="todo-list-item-due-date-over">{{days_until_due this.dueDate}}
-                        <span class="todo-list-item-due-date-tooltip">🥵 Was due on {{get_date_only this.dueDate}}</span>
+                        <span class="todo-list-item-due-date-tooltip">🥵 Due on {{get_date_only this.dueDate}}</span>
                     </div>
                 {{else}}
                     <div class="todo-list-item-due-date">{{days_until_due this.dueDate}}
