Fix creation date sorting button value

--- a/views/todo-list.hbs
+++ b/views/todo-list.hbs
@@ -23,10 +23,10 @@
                                                                                         orderDescending}}
                     name="orderBy">
                 {{get_button_label "Due Date" "dueDate" orderBy orderDescending}}</button>
-            <button class="custom-button" type="submit" value={{get_button_sortingvalue "createDate" orderBy
+            <button class="custom-button" type="submit" value={{get_button_sortingvalue "createdDate" orderBy
                                                                                         orderDescending}}
                     name="orderBy">
-                {{get_button_label "Creation Date" "createDate" orderBy orderDescending}}</button>
+                {{get_button_label "Creation Date" "createdDate" orderBy orderDescending}}</button>
             <button class="custom-button" type="submit" value={{get_button_sortingvalue "importance" orderBy
                                                                                         orderDescending}}
                     name="orderBy">
