--- a/views/todo-create.hbs
+++ b/views/todo-create.hbs
@@ -18,7 +18,8 @@
         <label for="date">Due date</label>
         <input class="text-input" id='date' name='date' type='date' value="{{today}}">
         <label for="description">Description</label>
-        <textarea class="text-input" id='description' rows="5" maxlength="1000" placeholder="Enter Description" name='description'></textarea>
+        <textarea class="text-input" id='description' rows="5" maxlength="1000" placeholder="Enter Description"
+                  name='description'></textarea>
     </div>
     <div class="todo-detail-controls">
         <input class="custom-button" type='submit' value='Create' name="createButton">
